force-app/main/default/objects/Invoice_Item__c/fields/Amount_Before_Discount__c.field-meta.xml
<CustomField>
    <fullName>Amount_Before_Discount__c</fullName>
    <description>Used to store amount before discount calculated</description>
    <label>Amount Before Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>