force-app/main/default/objects/Invoice_Item__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <description>Used to store the percentage value of discount from invoice line item</description>
    <label>Discount Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>