force-app/main/default/objects/Invoice_Item__c/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <label>Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <!-- <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value> -->
            <value>
                <fullName>Handling commission</fullName>
            </value>
            <value>
                <fullName>Amendment commission</fullName>
            </value>
            <value>
                <fullName>Acceptance commission</fullName>
            </value>
            <value>
                <fullName>Commission for obtaining acceptance</fullName>
            </value>
            <value>
                <fullName>Commission on delivery</fullName>
            </value>
            <value>
                <fullName>Advising commission</fullName>
            </value>
            <value>
                <fullName>Confirmation commission</fullName>
            </value>
            <value>
                <fullName>Deferred payment commission</fullName>
            </value>
            <value>
                <fullName>Commission for taking up documents</fullName>
            </value>
            <value>
                <fullName>Opening commission</fullName>
            </value>
            <value>
                <fullName>Fee for payment under reserve</fullName>
            </value>
            <value>
                <fullName>Discrepancy fee</fullName>
            </value>
            <value>
                <fullName>Domicilation commission</fullName>
            </value>
            <value>
                <fullName>Commission for release of goods</fullName>
            </value>
            <value>
                <fullName>Collection commission</fullName>
            </value>
            <value>
                <fullName>Negotiation commission</fullName>
            </value>
            <value>
                <fullName>Return commission</fullName>
            </value>
            <value>
                <fullName>B/L splitting charges</fullName>
            </value>
            <value>
                <fullName>Trust commission</fullName>
            </value>
            <value>
                <fullName>Transfer commission</fullName>
            </value>
            <value>
                <fullName>Commission for opening irrevocable documentary credits</fullName>
            </value>
            <value>
                <fullName>Pre-advice commission</fullName>
            </value>
            <value>
                <fullName>Supervisory commission</fullName>
            </value>
            <value>
                <fullName>Model charges</fullName>
            </value>
            <value>
                <fullName>Risk commission</fullName>
            </value>
            <value>
                <fullName>Guarantee commission</fullName>
            </value>
            <value>
                <fullName>Reimbursement commission</fullName>
            </value>
            <value>
                <fullName>Stamp duty</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>Bank charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>