force-app/main/default/objects/Invoice_Item__c/fields/Tax_Exemption_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Reason__c</fullName>
    <label>Tax Exemption Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tax_ID__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The international transport of goods</fullName>
            </value>
            <value>
                <fullName>International transport of passengers</fullName>
            </value>
            <value>
                <fullName>Services directly connected and incidental to a supply of international passenger transport</fullName>
            </value>
            <value>
                <fullName>Supply of a qualifying means of transport</fullName>
            </value>
            <value>
                <fullName>Any services relating to goods or passenger transportation</fullName>
            </value>
            <value>
                <fullName>Medicines and medical equipment</fullName>
            </value>
            <value>
                <fullName>Qualifying metals</fullName>
            </value>
            <value>
                <fullName>Private education to citizen</fullName>
            </value>
            <value>
                <fullName>Private healthcare to citizen</fullName>
            </value>
            <value>
                <fullName>Supply of qualified military goods</fullName>
            </value>
            <value>
                <fullName>Financial services</fullName>
            </value>
            <value>
                <fullName>Life insurance</fullName>
            </value>
            <value>
                <fullName>Real estate transactions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>