force-app/main/default/objects/Invoice_Item__c/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <label>Tax ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Rate</fullName>
            </value>
            <value>
                <fullName>Zero Rate</fullName>
            </value>
            <value>
                <fullName>Exempted From Tax</fullName>
            </value>
            <value>
                <fullName>Outside Scope of Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>